--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@radix-ui/react-slot": "^1.1.0",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -11,6 +12,7 @@
     "@types/react": "^18.3.8",
     "@types/react-dom": "^18.3.0",
     "axios": "^1.7.2",
+    "class-variance-authority": "^0.7.0",
     "express": "^4.19.2",
     "js-cookie": "^3.0.5",
     "react": "^18.2.0",
@@ -19,6 +21,7 @@
     "react-scripts": "^5.0.1",
     "time-events-manager": "^0.1.1",
     "typescript": "^5.6.2",
+    "vaul": "^1.0.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -48,6 +51,7 @@
   "devDependencies": {
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "@babel/plugin-transform-private-property-in-object": "^7.22.11",
+    "tailwind-merge": "^2.5.2",
     "tailwindcss": "^3.3.3"
   },
   "overrides": {
